# jp-reading-questions

./: .gitignore  Dockerfile  README.md  docker-compose.yml
app/: .env.example  Dockerfile  pyproject.toml
app/src/: main.py
app/src/jp_reading_questions/: agent.py  evaluation.py  prediction.py  score.py
app/src/jp_reading_questions/models/: question_model.py
app/src/jp_reading_questions/prompts/: prompt_loader.py  system.md  user.md
app/src/jp_reading_questions/prompts/dspy/: question_dspy.py
app/src/jp_reading_questions/prompts/scorers/: answer_correctness.md  option_quality.md  question_relevance.md
app/src/prompts/jp-reading-questions/: system.md
mlflow_server/: Dockerfile  pyproject.toml
