[tool.poetry]
name = "jp_reading_questions"
version = "0.1.0"
description = "Japanese reading questions with MLflow"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "jp_reading_questions", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
mlflow = ">=2.10.0"
openai = ">=1.0.0"
anthropic = "^0.39.0"
langchain = ">=0.1.0"
langchain-openai = "^0.2.13"
pandas = "^2.2.3"
numpy = "^1.26.0"
scikit-learn = "^1.5.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.2"
pyyaml = "^6.0.2"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
