[tool.poetry]
name = "mlflow_server"
version = "0.1.0"
description = "MLflow tracking server"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mlflow = ">=2.10.0"
boto3 = "^1.34.0"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
